# setup.cfg
[metadata]
name = ys_cli_project
description = print the arguments you pass
version = 0.1.0
author = Yograj Shisode
author_email = yograj.shisode@opcito.com
license = MIT
url = https://jorgealvarado.me

[options]
packages = find:

[options.entry_points]
console_scripts =
    ys-cli = ys_cli.main:main
